--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,7 +37,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- Keeps the processor from sleeping when a message is received. -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="android.permission.VIBRATE"/>
+	<uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <!--
      Creates a custom permission so only this app can receive its messages.
 
